# orvix

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: dependency-audit.yml  migration-order.yml  protocol-sync.yml  test.yml
docs/: README.md  api-reference.md  burn-procedure.md  faq.md  getting-started.md  operations.md  provider-guide.md  tokenomics.md
docs/governance/: README.md  launch-announcement.md  setup-snapshot.md
docs/operations/: migrations.md
orchestrator/: .env.example  .gitignore  README.md  pytest.ini  requirements.txt  test_auth.py  test_openai_client.py  test_payment.py
orchestrator/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logger.py  main.py  middleware.py
orvix-node/: .env.example  .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml  requirements.txt  test_connection.py
orvix-node/orvix_node/: __init__.py  __main__.py  binary.py  cli.py  client.py  config.py  exceptions.py  executor.py  gpu.py  health.py  logger.py  protocol.py  state.py
orvix-node/orvix_node/inference/: __init__.py  base.py  flux.py  manager.py  mock.py  router.py  vllm.py
orvix-node/scripts/: download_flux.py
orvix-node/tests/: test_binary_endpoint.py  test_client.py  test_config.py  test_engine_base.py  test_executor.py  test_flux_engine.py  test_gpu.py  test_health.py  test_model_manager.py  test_router.py  test_vllm.py
(+90 files in other folders)
