[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orvix-node"
version = "0.1.0"
description = "Orvix Node Software — run GPU compute for the Orvix decentralized AI network."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Orvix" }]
dependencies = [
    "click>=8.1",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "httpx>=0.27",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# Real GPU inference. Linux + CUDA only.
gpu = ["pynvml>=11.5", "vllm>=0.5"]
# GPU detection without vLLM (works for monitoring on any NVIDIA box).
nvml = ["pynvml>=11.5"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
orvix-node = "orvix_node.cli:cli"

[tool.setuptools.packages.find]
include = ["orvix_node*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
